# optiq

./: .gitignore  LICENSE  README.md  gen-icon.ps1  index.html  package-lock.json  package.json  prompt-optimizer-plan.md  vite.config.js
.github/workflows/: build.yml
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  openai.rs  optimizer.rs
