[package]
name = "optiq"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
directories = "6"
enigo = "0.3"

[target.'cfg(windows)'.dependencies]
base64 = "0.22"
windows = { version = "0.61", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_Foundation",
] }

[target.'cfg(not(windows))'.dependencies]
keyring = "2"
